# sendme-ui

./: .gitignore  Cargo.toml  README.md
src/: backend.rs  interconnect.rs  main.rs  view.rs
src/backend/: receive.rs  send.rs
