[package]
name = "sendme"
version = "0.23.0"
edition = "2021"
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Fruduruk/sendme-ui"
description = "A tool to send directories over the network, with NAT hole punching"
readme = "README.md"

rust-version = "1.81"

[dependencies]
arboard = "3.4.1"
egui = "0.31.0"
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
rfd = "0.15.2"
anyhow = "1.0.75"
async-channel = "2.3.1"
console = "0.15.7"
derive_more = { version = "2.0.1", features = [
    "display",
    "from_str"
] }
futures-buffered = "0.2.4"
futures-lite = "2.3.0"
indicatif = "0.17.7"
iroh-blobs = { version = "0.32", features = ["net_protocol"] }
iroh = "0.32"
num_cpus = "1.16.0"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
walkdir = "2.4.0"
data-encoding = "2.6.0"
n0-future = "0.1.2"

[dev-dependencies]
duct = "0.13.6"
rand = "0.8.5"
tempfile = "3.8.1"
[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh.git", branch = "main" }
iroh-blobs = { git = "https://github.com/n0-computer/iroh-blobs.git", branch = "main" }
